# Thesis---Implementation-of-Controllers-for-Operating-an-USV

./: pid.cpp
Excel_data_dynamic_model/: thrusters_dat_log.csv
Implementation/c_code/: CMakeLists.txt  USV.C
Implementation/c_code/include/: ctr.h  orient_a_45.h  pid.h  vel_2_thrust.h
Implementation/c_code/src/: initialize.c  limiter.c  mixer.c  orientation_above_45.c  pid.c
Implementation/c_code_/: main.c
Implementation/c_code_/include/: initial.h  mix.h  struct.h
Implementation/c_code_/src/: controllers.c  limiter.c  mixer.c  update_return.c  vel_2_thrust.c
Marine Systems Simulator (MSS)/: Contents.m
Marine Systems Simulator (MSS)/GNC/: Untitled.m  crossFlowDrag.m
Marine Systems Simulator (MSS)/VESSELS/: SIMotter.m  otter.m  untitled.slx
Marine Systems Simulator (MSS)/resources/: addons_core.xml  matlab_path_entries.xml  metadata.xml
Matlab_Simulink/: forcesCalc.mlx  lin_and_controllers_vs_2.mlx  motor_settings.mlx  simulink_30_03.slxc
Matlab_Simulink/controller designs/: Copy_of_sys_PID.slx  Copy_of_sys_PID.slxc  USV_Model_15_02.slxc  model.slx  simulink_30_03.slx  simulink_30_03.slx.original  simulink_30_03.slxc  sys_PID.slx  sys_PID.slx.autosave  sys_PID.slx.original  system_control.slx  system_control_.slx
Matlab_Simulink/slprj/_jitprj/: jitEngineAccessInfo.mat  s07jgOf2oVImXtX9GipishG.l  s07jgOf2oVImXtX9GipishG.mat  s09h6Uonoz03iBEim4jf2oC.mat  (+487 more)
c_code/: USV.C  main.c
c_code/include/: lim.h  struct.h
c_code/src/: controllers.c  initialize.c  limiter.c  mixer.c  orientation_above_45.c  update_return.c  vel_2_thrust.c
(+1768 files in other folders)
