cmake_minimum_required(VERSION 2.8)
project( USV )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -o -lm")
file(GLOB_RECURSE SRC_FILES src/*.c)
add_executable( USV main.c ${SRC_FILES})
add_library(rhd STATIC IMPORTED)
set_property(TARGET rhd PROPERTY IMPORTED_LOCATION "/home/frederik/Documents/speciale/rhd-mbzirc-master/build/lib/librhd.a")
target_include_directories(USV PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries( USV pthread m rhd)
